# Vigilattice

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  render.yaml
backend/: Dockerfile  pyproject.toml
backend/baselines/: mock-safe.json
backend/src/vigilattice/: __init__.py  main.py  regression_gate.py
backend/src/vigilattice/agents/: base.py  claude.py  llm.py  mock.py
backend/src/vigilattice/api/: router.py
backend/src/vigilattice/api/routes/: analytics.py  batches.py  health.py  regressions.py  runs.py  scenarios.py
backend/src/vigilattice/core/: config.py  logging.py
backend/src/vigilattice/evaluation/: engine.py
backend/src/vigilattice/mcp_servers/: __init__.py
backend/src/vigilattice/models/: analytics.py  api.py  batch.py  regression.py  run.py  scenario.py  trace.py
backend/src/vigilattice/scenarios/: loader.py
backend/src/vigilattice/scenarios/builtin/: approval_bypass.yaml  cross_tenant_access.yaml  destructive_tool.yaml  injected_incident.yaml  secret_exfiltration.yaml  (+1 more)
backend/src/vigilattice/services/: arena.py  container.py
backend/src/vigilattice/storage/: base.py  memory.py  sqlite.py
backend/src/vigilattice_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_batch_reports.py  test_benchmark_suite.py  test_evaluation_engine.py  test_health.py  test_llm_agent.py  test_persistence_analytics.py  test_production_readiness.py  test_regression_baselines.py  test_regression_gate.py  test_runs.py  test_scenarios.py
(+32 files in other folders)
