[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilattice-api"
version = "0.1.0"
description = "Adversarial evaluation infrastructure for autonomous AI agents"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi[standard]>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
agents = [
  "anthropic",
  "claude-agent-sdk",
  "mcp",
]
dev = [
  "httpx2>=2.4,<3.0",
  "pytest>=8.3,<10.0",
  "pytest-cov>=6.0,<8.0",
  "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.package-data]
vigilattice = ["scenarios/builtin/*.yaml"]
